--- a/AluraCsharpBasico/AluraCsharpBasico/AluraCsharpBasico.csproj
+++ b/AluraCsharpBasico/AluraCsharpBasico/AluraCsharpBasico.csproj
@@ -46,9 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaixaEletronico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CaixaEletronico.Designer.cs">
+      <DependentUpon>CaixaEletronico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cliente.cs" />
     <Compile Include="ClienteEnc.cs" />
     <Compile Include="Conta.cs" />
+    <Compile Include="ContaCxEl.cs" />
     <Compile Include="ContaEnc.cs" />
     <Compile Include="EmpresaArea.cs" />
     <Compile Include="Form1.cs">
@@ -60,6 +67,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TotalizadorDeContas.cs" />
+    <EmbeddedResource Include="CaixaEletronico.resx">
+      <DependentUpon>CaixaEletronico.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
